--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 html,body{
     font-family: 'Heebo', sans-serif;
+    background-color: #ccc;
 }
 .blog-item h3{
     font-weight: 500;
@@ -18,4 +19,28 @@ html,body{
     font-size: 20px;
     line-height: 29px;
     color: #8695A4;
+}
+button{
+    background-color: rgb(255, 94, 0);
+    margin: 200px;
+}
+.card{
+    background-color: #fff;
+    margin-top: 30px;
+    margin-left: 60px;
+    margin-right: 60px;
+    padding: 30px;
+    border-radius: 6px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+.card .card-title{
+    font-size: 27px;
+    margin-bottom: 12px;
+}
+.card .card-body div:nth-child(1){
+    font-weight: bold;
+    color: green;
+}
+.card .card-body div:nth-child(2),.card .card-body div:nth-child(3){
+    color: #666;
 }
