--- a/css/card-styles.css
+++ b/css/card-styles.css
@@ -1,8 +1,9 @@
 html,body{
-    font-family: "Heebo" sans-serif;
+    font-family: "Heebo";
     margin: 0px;
     padding: 0px;
     background-color:#E5E5E5 ;
+    font-style: bold;
 }
 h3,h2,h1,p,h4{
     margin:0px;
@@ -34,3 +35,57 @@ header nav li a{
     color: #000000;
 }
 /* Hero Section */
+.hero-section{
+    background-color: #fff;
+    padding: 158px 0;
+}
+.hero-section .hero-inner{
+    max-width: 960px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+}
+.hero-section .hero-inner .col-left {
+    max-width: 497px;
+}
+.hero-section .hero-inner .col-left h1 {
+    font-weight: 700;
+    font-size: 44px;
+    line-height: 60px;
+    color: #21243D;
+}
+.hero-section .hero-inner .col-left h1:nth-child(2) {
+    font-weight: 700;
+    font-size: 44px;
+    line-height: 60px;
+    color: #21243D;
+    margin-bottom: 40px;
+}
+.hero-section .hero-inner .col-left p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #21243D;
+
+}
+.hero-section .hero-inner .col-left .action-button {
+    background: #FF6464;
+    margin-top: 38px;
+    height: 47px;
+    border-radius: 2px;
+    width: 208px;
+    color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.hero-section .hero-inner .col-right img{
+    max-width: 243px;
+    max-height: 243px;
+    display: flex;
+    flex: 1;
+    justify-content: flex-end;
+    align-items: center;
+    padding-left: 106px;
+}
