--- a/css/card-styles.css
+++ b/css/card-styles.css
@@ -2,7 +2,7 @@ html,body{
     font-family: "Heebo";
     margin: 0px;
     padding: 0px;
-    background-color:#E5E5E5 ;
+    background: #e5e5e5; ;
     font-style: bold;
 }
 h3,h2,h1,p,h4{
@@ -73,7 +73,7 @@ header nav li a{
     margin-top: 38px;
     height: 47px;
     border-radius: 2px;
-    width: 208px;
+    max-width: 208px;
     color: #FFFFFF;
     display: flex;
     justify-content: center;
@@ -81,11 +81,34 @@ header nav li a{
 
 }
 .hero-section .hero-inner .col-right img{
-    max-width: 243px;
     max-height: 243px;
     display: flex;
     flex: 1;
     justify-content: flex-end;
     align-items: center;
     padding-left: 106px;
+}
+/* class posts section*/
+.posts{
+    background-color: #EDF7FA;
+    padding: 32px 0;
+}
+.posts .post-section{
+    max-width: 960px;
+    margin: 0 auto;
+}
+.post-section .posts-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.post-section .posts-header h2{
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 60px;
+    color:#21243D;
+}
+.post-section .posts-header a{
+    color: #00A8CC;
+    text-decoration: none;
 }
