--- a/css/card-styles.css
+++ b/css/card-styles.css
@@ -73,7 +73,7 @@ header nav li a{
     margin-top: 38px;
     height: 47px;
     border-radius: 2px;
-    max-width: 208px;
+    max-width: 207px;
     color: #FFFFFF;
     display: flex;
     justify-content: center;
@@ -86,7 +86,7 @@ header nav li a{
     line-height: 24px;
     color: #FFFFFF;
 }
-.hero-section .hero-inner .col-right img{
+.col-right img{
     max-height: 243px;
     display: flex;
     flex: 1;
@@ -229,12 +229,54 @@ header nav li a{
         justify-content: flex-end;
         align-items: center;
         border-radius: 50%;
+        margin-bottom: 43px;
+        margin-left: 0px;
     }
-    .hero-section .hero-inner .col-left{
+    .hero-section .hero-inner .col-left h1{
         text-align: center;
+    }
+    .hero-section .hero-inner .col-left p{
+        text-align: center;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 24px;
+        text-align: center;
+        padding:0 24px;
+
+        /* Dark Color */
+
+        color: #21243D;
+    }
+    .hero-section .hero-inner .col-left .action-button{
+        margin: 0 84px;
+        margin-top: 27px;
+        margin-bottom: 54px;
+    }
+    .post-section .post-item{
+        display: flex;
+        flex-direction: column;
+        margin: 0 10px;
+    }
+    .featured-section .featured-inner .featured-list .featured-item{
+        display: flex;
+        flex-direction: column;
     }
   }
 
 footer{
-    background-color:yellow
+    max-height: 182px;
+}
+footer .social-icons{
+    display: flex;
+    gap: 35px;
+    justify-content: center;
+    padding-bottom: 26px;
+}
+footer p{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+    text-align: center;
+    color: #21243D;
+    margin-bottom: 54px;
 }
