--- a/css/card-styles.css
+++ b/css/card-styles.css
@@ -2,7 +2,7 @@ html,body{
     font-family: "Heebo";
     margin: 0px;
     padding: 0px;
-    background: #eee;
+    background: #FFFFFF;
     font-style: bold;
 }
 h3,h2,h1,p,h4{
