--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 html,body{
     font-family: 'Heebo', sans-serif;
-    background-color: #ccc;
+    background-color: #fff;
 }
 .blog-item h3{
     font-weight: 500;
