social icons blog content

--- a/css/card-styles.css
+++ b/css/card-styles.css
@@ -260,6 +260,8 @@ header nav li a{
     .featured-section .featured-inner .featured-list .featured-item{
         display: flex;
         flex-direction: column;
+        margin-left: 10px;
+        margin-right: 10px;
     }
   }
 
